@@ -56,11 +56,11 @@ sup {vertical-align:super; font-size:0.9em;}
 ins, mark {font-weight:bold; background:none; text-decoration:none; color:#21759b;}
 cite, em, abbr, acronym {font-style:italic;}
 code, kbd, samp, var {font-family:monospace, monospace;}
-pre {margin:10px 0; padding:5px 10px; white-space:pre-wrap; border:1px solid #999;}
-blockquote, q {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:2px solid #999;}
-address {margin:10px 0; font-style:italic;}
+pre {margin:0 0 10px; padding:5px 10px; white-space:pre-wrap; border:1px solid #999;}
+blockquote, q {margin:0 0 10px; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:2px solid #999;}
+address {margin:0 0 10px; font-style:italic;}
 p {margin:0 0 10px;}
-hr {height:1px; background:#999; border:0;}
+hr {height:1px; background:#999; border:0; margin:0 0 10px;}
 
 
 /* ALIGNMENTS */
@@ -70,15 +70,15 @@ hr {height:1px; background:#999; border:0;}
 
 
 /* TABLE AND LISTS */
-table {margin:10px 0; border-collapse:collapse;}
+table {margin:0 0 10px; border-collapse:collapse;}
 table, th, td {border:1px solid #999; padding:5px 10px;}
 table th {font-weight:bold;}
 
-ul {list-style:square; margin:10px 0;}
-ol {list-style:decimal; margin:10px 0;}
+ul {list-style:square; margin:0 0 10px;}
+ol {list-style:decimal; margin:0 0 10px;}
 li {margin:0 0 0 20px;}
 li > ul, li > ol {margin:0;}
-dl {margin:10px 0;}
+dl {margin:0 0 10px;}
 dt {font-weight:bold;}
 dd {margin:0 0 0 20px;}
 
