@@ -1,7 +1,7 @@
 /*
 Theme Name: MyKnowledgeBase
 Theme URI: http://www.guidovanderleest.nl/myknowledgebase
-Version: 5.3
+Version: 5.4
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: MyKnowledgeBase is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Create a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Link Portal with a custom page template and using the default categories and posts. Features: sidebar, homepage widgets, footer widgets, custom header image, custom background, custom logo to replace site title and tagline, full width page template, dropdown navigation. For more info please check readme file. Enjoy.
@@ -14,14 +14,7 @@ This theme, like WordPress, is licensed under the GPL.
 */
 
 
-/* 
-RESET STYLESHEET 
-Source: http://meyerweb.com/eric/tools/css/reset
-Author: Eric Meyer
-Author URI: http://meyerweb.com/ 
-License: none (public domain) 
-*/
-
+/* RESET STYLESHEET */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, 
 a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, 
 small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, 
@@ -97,11 +90,11 @@ sup {vertical-align:super; font-size:0.9em;}
 ins, mark {font-weight:bold; background:none; text-decoration:none; color:#08a0ff;}
 cite, em, abbr, acronym {font-style:italic;}
 code, kbd, samp, var {font-family:monospace, monospace;}
-pre {margin:10px 0; padding:5px 10px; white-space:pre-wrap; border:1px solid #eee;}
-blockquote, q {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:2px solid #08a0ff;}
-address {margin:10px 0; font-style:italic;}
+pre {margin:0 0 10px; padding:5px 10px; white-space:pre-wrap; border:1px solid #eee;}
+blockquote, q {margin:0 0 10px; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:2px solid #08a0ff;}
+address {margin:0 0 10px; font-style:italic;}
 p {margin:0 0 10px;}
-hr {height:1px; background:#eee; border:0;}
+hr {height:1px; background:#eee; border:0; margin:0 0 10px;}
 
 
 /* ALIGNMENTS */
@@ -111,15 +104,15 @@ hr {height:1px; background:#eee; border:0;}
 
 
 /* TABLE AND LISTS */
-table {margin:10px 0; border-collapse:collapse;}
+table {margin:0 0 10px; border-collapse:collapse;}
 table, th, td {border:1px solid #eee; padding:5px 10px;}
 table th {font-weight:bold;}
 
-ul {list-style:square; margin:10px 0;}
-ol {list-style:decimal; margin:10px 0;}
+ul {list-style:square; margin:0 0 10px;}
+ol {list-style:decimal; margin:0 0 10px;}
 li {margin:0 0 0 20px;}
 li > ul, li > ol {margin:0;}
-dl {margin:10px 0;}
+dl {margin:0 0 10px;}
 dt {font-weight:bold;}
 dd {margin:0 0 0 20px;}
 
@@ -130,7 +123,7 @@ input[type="submit"], input[type="reset"], input[type="button"], button {cursor:
 input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover, button:hover {background:#333;}
 input[type="checkbox"] {-webkit-appearance:checkbox; -moz-appearance:checkbox;}
 input[type="radio"] {-webkit-appearance:radio; -moz-appearance:radio;}
-select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist; background:#f8f8f8; color:#333;}
+select {max-width:100%; -webkit-appearance:menulist; -moz-appearance:menulist; background:#fff; color:#333;}
 button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
@@ -164,12 +157,11 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 /* HEADER FIRST MENU */
 .nav-head {width:65%; float:right; margin:25px 0 0; text-align:right;}
-.nav-head select {display:none;}
 .nav-head ul {padding:0; margin:0; z-index:999; list-style:none;}
 .nav-head ul li {display:inline-block; position:relative; padding:0; margin:0 0 0 20px;}
 .nav-head ul li a {text-decoration:none; padding:0 0 5px; display:inline-block;}
 .nav-head ul li a:hover {text-decoration:underline;}
-.nav-head .current_page_item > a, .nav-head .current_page_parent > a {text-decoration:underline;}
+.nav-head .current-menu-item > a, .nav-head .current-menu-parent > a {text-decoration:underline;}
 
 
 /* HEADER FIRST SUBMENU */
@@ -178,6 +170,11 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 .nav-head ul ul a {width:12em; padding:5px 10px; background:#333; color:#fff; text-align:left;}
 .nav-head ul li:hover > ul {display:block;}
 .nav-head ul li ul li {margin:0;}
+
+
+/* HEADER FIRST MOBILE MENU */
+.mobile-nav-toggle {display:none;}
+.mobile-nav {display:none;}
 
 
 /* HEADER SECOND */
@@ -288,7 +285,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 .comment-list li {margin:0; padding:0;}
 .comment-list .children > li {margin:0 0 0 10px;}
 .comment-body {background:#f8f8f8; border:1px solid #eee; padding:10px; margin:0 0 20px;}
-.comment-content {margin:10px 0;}
+.comment-content {padding:10px 0;}
 .comment-notes, .form-allowed-tags {font-size:0.80em; padding:5px 0;}
 .comments-title, .comment-reply-title, .no-comments {clear:both; font-size:1.45em;} 
 .comments-title {margin:0 0 20px;}
@@ -335,7 +332,7 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 /* MOBILE */
 @media screen and (max-width:767px) { 
 	/* BODY AND CONTAINER */
-	body {font-size:1em; line-height:1.2em;}
+	body {font-size:1em; line-height:1.5em;}
 	body.custom-background {background-image:none !important;}
 	#container {width:98%; padding:10px 1% 0;}
 
@@ -351,9 +348,16 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	.logo h2 {font-size:1.45em;}
 
 	/* HEADER FIRST MENU */
-	.nav-head ul {display:none;} 
-	.nav-head {width:100%; clear:both; float:left; margin:0 0 20px; text-align:left;}
-	.nav-head select {width:100%; display:block; margin:0 auto 0; font-size:1em; line-height:1.2em;} 
+	.nav-head {display:none;} 
+
+	/* HEADER FIRST MOBILE MENU */
+	.mobile-nav-toggle {clear:both; display:block; margin:0 0 20px; padding:10px 2%; background:#08a0ff; color:#fff; cursor:pointer;}
+	.mobile-nav-toggle:hover {color:#eee;}
+	.mobile-nav {clear:both; padding:10px 20px 10px 0; margin:0 5px 20px; background:#fff; border:2px solid #eee;}
+	.mobile-nav .subnav-toggle {float:right; display:block; margin:-45px 0 0; padding:2px 15px;}
+	.mobile-nav ul {list-style:none;}
+	.mobile-nav ul li a {display:block; margin:0 0 10px 0; padding:0 0 12px; border-bottom:2px dotted #eee; text-decoration:none;}
+	.mobile-nav ul li a:hover {color:#333;}
 
 	/* HEADER SECOND HOMEPAGE IMAGE */
 	.image-homepage {width:100%; clear:both;}
